--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: Build RedMi-AX6000 OpenWrt
+name: Build RedMi-AX6000 OpenWrt 2004
 
 on:
   repository_dispatch:
